--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- HEADER -->
         <tr>
           <td class="header">
-            <img align="right" src="https://mkt.letswork.com.br/media/images/emails/ModoDificil/logo2.png" alt="LetsWork" class="logo">
+            <img align="right" src="logo.png" alt="LetsWork" class="logo">
             <h1>Seu RH pode estar em RISCO</h1>
             <p style="color: #fff; font-size:20px;">Evite multas e <strong>processos trabalhistas</strong></p>
           </td>
@@ -219,7 +219,7 @@
         </tr>
         <tr>
           <td class="image-container">
-            <img src="https://mkt.letswork.com.br/media/images/emails/ModoDificil/warning.png" alt="Warning" style="border:0;">
+            <img src="warning.png" alt="Warning" style="border:0;">
           </td>
         </tr>
 
@@ -229,9 +229,9 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0" style="padding-bottom: 10px;">
               <tr>
                 <td align="center">
-                  <img src="https://mkt.letswork.com.br/media/images/emails/ModoDificil/coffeeAndpapels.png" class="image" alt="Office Desk" style="width: 40%; max-width: 240px; height: auto;">
+                  <img src="coffeeAndpapels.png" class="image" alt="Office Desk" style="width: 40%; max-width: 240px; height: auto;">
                   <span style="display: inline-block; width: 15px;">&nbsp;</span>
-                  <img src="https://mkt.letswork.com.br/media/images/emails/ModoDificil/martelo.png" class="image" alt="Gavel and Book" style="width: 40%; max-width: 240px; height: auto;">
+                  <img src="martelo.png" class="image" alt="Gavel and Book" style="width: 40%; max-width: 240px; height: auto;">
                 </td>  
               </tr>
             </table>
